# yaka-bridge

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Lancer-OIF-Eval.bat  Lancer-OIF-Eval.command  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  design-system.config.json  electron-builder.bridge.cjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  template.config.json  tsconfig.json  yaka.project.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
Projets/: README.md
app/: design-system.css  globals.css  layout.tsx  page.tsx
bridge/: agent-routing.ts  ai-policy.ts  bridge-preload.cjs  client.ts  config.ts  design-system.json  electron-main.cjs  index.ts  install.ts  provider-setup.cjs  runtime.ts  theme.cjs  types.ts
bridge-voice/: Cargo.toml
bridge-voice/src/: main.rs
briefs/: demo-erp-purchasing.md
components/: AdminShell.tsx  AppChromeHeader.tsx  BridgeMascot3D.tsx  BridgeStatusProvider.tsx  CalibrageSection.tsx  CampaignWizard.tsx  ChatDrawer.tsx  ClaudeMark.tsx  CloudAuthGate.tsx  ConflictBanner.tsx  CostsDashboard.tsx  CriteresGrid.tsx  DiffViewer.tsx  DossierFileViewer.tsx  DossierFiles.tsx  DossierFilesList.tsx  DossierList.tsx  Icon.tsx  Mark.tsx  OnboardingWizard.tsx  OpenReplayProvider.tsx  PanelLayout3.tsx  ProgressBar.tsx  ResizeHandle.tsx  ReviewForm.tsx  RuleProposalForm.tsx  RuntimeHealthGuard.tsx  SkillEditor.tsx  SourceLink.tsx  StorageGuard.tsx  StorageModeSelector.tsx  StreamingPanel.tsx  VeriteBadge.tsx
docs/: COMMANDES-DEPANNAGE.md  GUIDE-ADMIN.md  (+30 more)
(+190 files in other folders)
