[package]
name = "bridge-voice"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Native Bridge push-to-talk sidecar inspired by Handy"

[dependencies]
cpal = "0.16.0"
enigo = "0.6.1"
handy-keys = "0.2.4"
hound = "3.5.1"
rustfft = "6.4.1"
serde_json = "1.0"
transcribe-rs = { version = "0.3.11", features = ["onnx"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
